infra/k8s/dev/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: dev
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
